tests/errors/syntax/parameters_must_be_decls.odl
main :: () -> void {
    add :: (a: int, 50, b: int) -> void {
        return;
    };
};